# validador_de_cpf_crate_rust

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
